# python-config-file

./: .gitignore  Makefile  README.md  README.rst  setup.cfg  setup.py
pytconfig/: .__about__.py.swp  __about__.py  __init__.py  config.py  exceptions.py  file.py
tests/: facebook.json  facebook.yaml  test_doctest.py  use_it.py
