[metadata]
name = pytconfig
version = 1.0.0
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest config management Class
long_description = file: README.md
python_requires = >=3.5
platforms = linux
requires-dist = setuptools
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Programming Language :: Python :: 3.5
url = https://github.com/francois-le-ko4la/python-config
download_url = https://github.com/francois-le-ko4la/python-config.git
license = GPL

[options]
zip_safe = True
include_package_data = True
packages = find:
test_suite = tests.*
install_requires = pycodestyle>=2.3.1
                   setuptools>=39.0.1
                   PyYAML>=3.12
setup_requires = pytest-runner

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
