[metadata]
name = pytconfig
version = 1.1.1
author = Ko4lA
author-email = francois@le.ko4la.fr
summary = The funniest config management Class
long_description = file: README.md
platforms = linux
requires-dist = setuptools
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Programming Language :: Python :: 3.5
url = https://github.com/francois-le-ko4la/python-config
download_url = https://github.com/francois-le-ko4la/python-config.git
license = GPL

[options]
python_requires = >=3.5
packages = find:
install_requires =
	wheel>=0.31.0
	pycodestyle>=2.3.1
	setuptools>=39.0.1
	PyYAML>=3.12
setup_requires = pytest-runner
test_suite = tests.*
tests_require = pytest
include_package_data = True
zip_safe = False

[build-system]
requires = ["setuptools"]

[aliases]
test=pytest
release = sdist bdist_wheel

[tool:pytest]
addopts = --verbose
